# ChangeLog for dev-ruby/fast_gettext
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/fast_gettext/ChangeLog,v 1.16 2012/08/06 17:24:43 graaff Exp $

  06 Aug 2012; Hans de Graaff <graaff@gentoo.org> -fast_gettext-0.5.13.ebuild,
  -fast_gettext-0.6.7.ebuild:
  Cleanup.

*fast_gettext-0.6.8 (28 Jun 2012)

  28 Jun 2012; Hans de Graaff <graaff@gentoo.org> +fast_gettext-0.6.8.ebuild:
  Version bump.

  28 Jun 2012; Hans de Graaff <graaff@gentoo.org> -fast_gettext-0.6.4.ebuild,
  -fast_gettext-0.6.6.ebuild:
  Remove old versions.

  17 May 2012; Thomas Kahle <tomka@gentoo.org> fast_gettext-0.6.7.ebuild:
  marked ~x86 per bug 396547

*fast_gettext-0.6.7 (12 May 2012)

  12 May 2012; Hans de Graaff <graaff@gentoo.org> +fast_gettext-0.6.7.ebuild:
  Version bump.

  12 May 2012; Hans de Graaff <graaff@gentoo.org> -fast_gettext-0.6.0.ebuild,
  -fast_gettext-0.6.1.ebuild, -fast_gettext-0.6.4-r1.ebuild:
  Remove old versions.

*fast_gettext-0.6.6 (08 Apr 2012)

  08 Apr 2012; Hans de Graaff <graaff@gentoo.org> +fast_gettext-0.6.6.ebuild:
  Version bump.

*fast_gettext-0.6.4-r1 (23 Mar 2012)

  23 Mar 2012; Hans de Graaff <graaff@gentoo.org>
  +fast_gettext-0.6.4-r1.ebuild:
  Fix tests to use the proper interpreter and drop potential jeweler
  dependency. Add ruby19 and drop x86 as a consequence, bug 409399.

*fast_gettext-0.6.4 (18 Dec 2011)

  18 Dec 2011; Hans de Graaff <graaff@gentoo.org> +fast_gettext-0.6.4.ebuild:
  Version bump.

*fast_gettext-0.6.1 (16 Oct 2011)

  16 Oct 2011; Hans de Graaff <graaff@gentoo.org> +fast_gettext-0.6.1.ebuild:
  Version bump. Add bundler as a test dependency since it is actively used
  during testing.

  11 Oct 2011; Hans de Graaff <graaff@gentoo.org> fast_gettext-0.6.0.ebuild:
  Add x86 keyword.

*fast_gettext-0.6.0 (07 Oct 2011)

  07 Oct 2011; Hans de Graaff <graaff@gentoo.org> +fast_gettext-0.6.0.ebuild:
  Version bump.
