@@ -1,0 +1,46 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/fast_gettext/fast_gettext-0.6.9.ebuild,v 1.1 2012/08/06 17:29:08 graaff Exp $
+
+EAPI="4"
+
+# jruby support requires sqlite3 support for jruby.
+USE_RUBY="ruby18 ruby19 ree18"
+
+RUBY_FAKEGEM_TASK_DOC=""
+RUBY_FAKEGEM_EXTRADOC="CHANGELOG Readme.md"
+
+RUBY_FAKEGEM_RECIPE_TEST="rspec"
+
+inherit ruby-fakegem
+
+DESCRIPTION="GetText but 3.5 x faster, 560 x less memory, simple, clean namespace (7 vs 34) and threadsave!"
+HOMEPAGE="https://github.com/grosser/fast_gettext"
+
+LICENSE="public-domain"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+ruby_add_bdepend "test? ( dev-ruby/activerecord dev-ruby/bundler )"
+
+all_ruby_prepare() {
+	rm Gemfile.lock || die
+
+	# Remove jeweler from Gemfile since it is not needed for tests.
+	sed -i '/jeweler/d' Gemfile || die
+
+	# Avoid unneeded dependency on git.
+	sed -i -e '/git ls-files/ s:^:#:' fast_gettext.gemspec || die
+
+	# Don't run a test that requires safe mode which we can't provide
+	# due to insecure directory settings for the portage dir. This spec
+	# also calls out to ruby which won't work with different ruby
+	# implementations.
+	sed -i -e '/can work in SAFE mode/,/end/ s:^:#:' spec/fast_gettext/translation_repository/mo_spec.rb || die
+}
+
+each_ruby_prepare() {
+	# Make sure the right ruby interpreter is used
+	sed -i -e "s:bundle exec ruby:bundle exec ${RUBY}:" spec/fast_gettext/vendor/*spec.rb || die
+}
