@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/fast_gettext
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/fast_gettext/ChangeLog,v 1.16 2012/08/06 17:24:43 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/fast_gettext/ChangeLog,v 1.17 2012/08/06 17:29:08 graaff Exp $
+
+*fast_gettext-0.6.9 (06 Aug 2012)
+
+  06 Aug 2012; Hans de Graaff <graaff@gentoo.org> +fast_gettext-0.6.9.ebuild:
+  Version bump.
 
   06 Aug 2012; Hans de Graaff <graaff@gentoo.org> -fast_gettext-0.5.13.ebuild,
   -fast_gettext-0.6.7.ebuild:
